chore: update prettier action
chore: fixes after review

chore: fixes after review

chore: visual fixes after review

--- a/docs/src/documentation/03-components/02-structure/tabs/01-guidelines.mdx
+++ b/docs/src/documentation/03-components/02-structure/tabs/01-guidelines.mdx
@@ -4,6 +4,8 @@ redirect_from:
   - /components/tabs/
 ---
 
+<ReactExample exampleId="Tabs-default" />
+
 ## When to use
 
 - You have a lot of content that can be divided into separate tasks.
