feat: remove translation and dictionary components
BREAKING CHANGE:
useTranslate, useDictionary, Translate and Dictionary componentes were removed.

--- a/docs/src/documentation/01-getting-started/02-for-developers.mdx
+++ b/docs/src/documentation/01-getting-started/02-for-developers.mdx
@@ -53,7 +53,7 @@ Don't forget to also install [styled-components](https://github.com/styled-compo
    <Alert>Hello World!</Alert>;
    ```
 
-If you want to use a custom theme or dictionary inside your project,
+If you want to use a custom theme inside your project,
 it's necessary to wrap your app in `<OrbitProvider>`.
 See [more info about the Orbit provider](/utilities/orbit-provider/).
 
@@ -81,7 +81,6 @@ yarn add @types/styled-components -D
 - [Right to left languages](/development/utilities/rtl-languages/)
 - [OrbitProvider](/utilities/orbit-provider/)
 - [Theming](https://github.com/kiwicom/orbit/blob/master/.github/theming.md)
-- [Dictionary](/development/guides/dictionary/)
 
 ## Contributing
 
