--- a/docs/src/documentation/03-components/03-information/alert/01-guidelines.mdx
+++ b/docs/src/documentation/03-components/03-information/alert/01-guidelines.mdx
@@ -40,7 +40,7 @@ import MoreThanColorSnippet from "snippets/more-than-color.mdx";
 
 <MoreThanColorSnippet component="alert" />
 
-<Guideline type="do" title="Use icons">
+<Guideline title="Use icons">
 
 Without icons, people with color blindness might see success and critical alerts as the same.
 
@@ -110,6 +110,10 @@ There are four types of alerts: _informational_, _success_, _warning_, and _crit
 
 <ReactExample exampleId="Alert-types" />
 
+<Grid columns="1fr" desktop={{ "columns": "1fr 1fr" }} gap="16px">
+
+<Container>
+
 #### Informational alert
 
 Informational alerts are the most common alerts.
@@ -118,6 +122,12 @@ but keep it focused and related to the topic on the screen.
 
 Consider tailoring your icons to your message.
 Baggage, clocks, or other symbols strengthen the informative nature of your message.
+
+![INFORMATION_ALERT](fileId:fannvRpkOJK6uxxT33EKaa;nodeId:1181%6432)
+
+</Container>
+
+<Container>
 
 #### Success alert
 
@@ -129,11 +139,27 @@ Usually used without an action button.
 such as when users need to confirm something by e-mail.
 For such actions, use an informational alert instead.
 
+![SUCCESS_ALERT](fileId:fannvRpkOJK6uxxT33EKaa;nodeId:1181%6322)
+
+</Container>
+
+</Grid>
+
+<Grid columns="1fr" desktop={{ "columns": "1fr 1fr" }} gap="16px">
+
+<Container>
+
 #### Warning alert
 
 Use warning alerts when you need to inform users about a **potentially unfavorable situation**
 that requires eventual action from them.
 If the issue requires immediate attention, use a critical alert.
+
+![WARNING_ALERT](fileId:fannvRpkOJK6uxxT33EKaa;nodeId:1181%6435)
+
+</Container>
+
+<Container>
 
 #### Critical alert
 
@@ -144,6 +170,12 @@ The alert should offer a solution to the problem.
 A critical alert should provide some form of solution for their problem.
 If something is **important for users to solve as soon as possible**,
 it's worth considering automatically opening a [modal](/components/overlay/modal/).
+
+![CRITICAL_ALERT](fileId:fannvRpkOJK6uxxT33EKaa;nodeId:1181%6377)
+
+</Container>
+
+</Grid>
 
 ### Mobile vs. desktop
 
