chore: fix eslint erros after update

--- a/docs/src/documentation/01-getting-started/02-for-developers.mdx
+++ b/docs/src/documentation/01-getting-started/02-for-developers.mdx
@@ -1,6 +1,6 @@
 ---
 title: For developers
-description: How to use our components from their npm package.
+description: How to use our components from their npm package
 ---
 
 **`Orbit-components` is a React component library to help developers build travel products.**
