--- a/docs/src/documentation/03-components/03-information/alert/01-guidelines.mdx
+++ b/docs/src/documentation/03-components/03-information/alert/01-guidelines.mdx
@@ -6,49 +6,163 @@ redirect_from:
 
 import { Grid } from "@kiwicom/orbit-components";
 
-import MoreThanColorSnippet from "snippets/more-than-color.mdx";
+import WebStructureImage from "../../../../images/component-structure/web/alert.svg";
+import AlertInfoActions from "../../../../images/alert-info-w-actions.svg";
+import AlertUseIconsDo from "../../../../images/alert-use-icons_do.svg";
+import AlertUseIconsDont from "../../../../images/alert-use-icons_dont.svg";
+
+## Overview
+
+Alert is used to communicate important information or feedback to the user. It is designed to grab the user's attention and convey a specific message in a clear and concise manner.
+
+<FigmaIframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FTnS9DSwI8Om2bpkTL9ZMFz%2FDocumentation-frames%3Fnode-id%3D98684%253A898%26t%3DghvgAbaL1kqUSQGb-1" />
+
+<Usage>
+
+<UsageUse>
+
+- When you want to interrupt a user's journey with relevant information.
+
+- For things like status messages and additional explanations.
+
+</UsageUse>
+<UsageDontUse>
+
+- When there are already many on the screen. Don't overwhelm the user.
+
+- For messages that shouldn't interrupt the flow---consider [heading](/components/text/heading/)
+  and [text](/components/text/text/).
+
+- For temporary messages that don't draw much attention---use a [toast](/components/information/toast/).
+
+- When no results match a user query---use an [empty state](/components/progress-indicators/emptystate/).
+
+- When a user has to solve an issue **as soon as possible**---use a [modal](/components/overlay/modal/).
+
+</UsageDontUse>
+
+</Usage>
+
+## Component playground
 
 <ReactExample exampleId="Alert-default" />
 
-## When to use
+## Look & feel
 
-- When you want to interrupt a user's journey with relevant information.
-- For things like status messages and additional explanations.
+### Component structure
 
-## When not to use
+<ComponentStructure
+  component="Alert"
+  vertical
+  web={{
+    Image: WebStructureImage,
+    parts: [
+      {
+        name: "Title",
+        description: "Works best with 5 to 8 words (in English).",
+      },
+      {
+        name: "Icon",
+        description: "Optionally supports the message.",
+      },
+      {
+        name: "Description",
+        description:
+          "Optionally provides more context for the message, usually when the message is long.",
+      },
+      {
+        name: "Actions",
+        description: "Optionally adds related actions for users to take.",
+      },
+    ],
+  }}
+/>
 
-- When there are already many on the screen. Don't overwhelm the user.
-- For messages that shouldn't interrupt the flow---consider [heading](/components/text/heading/)
-  and [text](/components/text/text/).
-- For temporary messages that don't draw much attention---use a [toast](/components/information/toast/).
-- When no results match a user query---use an [empty state](/components/progress-indicators/emptystate/).
-- When a user has to solve an issue **as soon as possible**---use a [modal](/components/overlay/modal/).
+### Alert types
 
-## Component status
+There are four types of alerts: **informational**, **success**, **warning**, and **critical**.
 
-<ComponentStatus component="Alert" />
+<Grid columns="1fr" desktop={{ columns: "1fr 1fr" }} gap="16px">
 
-## Content structure
+<Container>
 
-### Mobile
+<div>
 
-![Icon: supports the message; title: works best with 5 to 8 words (in English); closable: optionally lets users close the message; action: optionally adds related actions for users to take; description: provides more context for the message, usually when the message is long.](fileId:4QJZqvBvRrLu6t9mwObCkA;nodeId:289%3A0)
+#### Informational alert
 
-### Desktop
+Informational alerts are the most common alerts.
+Use them to **guide a user’s attention to relevant details**, but keep it focused and related to the topic on the screen.
 
-![Icon: supports the message; title: works best with 5 to 8 words (in English); closable: optionally lets users close the message; action: optionally adds related actions for users to take; actions: optionally adds actions for users to take; description: provides more context for the message, usually when the message is long.](fileId:4QJZqvBvRrLu6t9mwObCkA;nodeId:566%3A2147)
+</div>
 
-## Behavior
+![Informational alert](fileId:fannvRpkOJK6uxxT33EKaa;nodeId:1544-5720)
 
-<MoreThanColorSnippet component="alert" />
+</Container>
 
-<Guideline title="Use icons">
+<Container>
 
-Without icons, people with color blindness might see success and critical alerts as the same.
+<div>
 
-![Success and critical alerts with icons are clear even without color.](fileId:fannvRpkOJK6uxxT33EKaa;nodeId:364%3A1542)
+#### Success alert
 
-![Success and critical alerts without icons aren't clear without color.](fileId:fannvRpkOJK6uxxT33EKaa;nodeId:364%3A1543)
+Success alerts confirm that an instruction from the user, such as to make a payment or request a refund, was processed successfully.
+Usually used without an action button.
+
+</div>
+
+![Success alert](fileId:fannvRpkOJK6uxxT33EKaa;nodeId:1544-5717)
+
+</Container>
+
+<Container>
+
+<div>
+
+#### Warning alert
+
+Use warning alerts when you need to inform users about a **potentially unfavorable situation** that requires eventual action from them.
+If the issue requires immediate attention, use a critical alert.
+
+</div>
+
+![Warning alert](fileId:fannvRpkOJK6uxxT33EKaa;nodeId:1544-5714)
+
+</Container>
+
+<Container>
+
+<div>
+
+#### Critical alert
+
+Use critical alerts when something is **blocking users from continuing** or an issue needs to be **resolved immediately**.
+The alert should offer a solution to the problem.
+
+</div>
+
+![Critical alert](fileId:fannvRpkOJK6uxxT33EKaa;nodeId:1544-5711)
+
+</Container>
+
+</Grid>
+
+## Guidelines
+
+### Explain the alert
+
+Explain why the user was interrupted—confirm the action that will happen or describe what just happened.
+
+Keep it clear, short, and simple. Alerts break the user flow, so you want to explain why with as few details as possible.
+
+For longer messages, use a title for quick info. The user sees the title first when scanning the message. You can also provide additional context for the alert by adding a description. For more complex messages, let users access more information through an action button.
+
+<Guideline title="Provide context">
+
+While using Alerts it is important to provide context, so the user know directly from the title what is the message about.
+
+![Context provided.](fileId:fannvRpkOJK6uxxT33EKaa;nodeId:681-5225)
+
+![Context is not provided.](fileId:fannvRpkOJK6uxxT33EKaa;nodeId:681-5226)
 
 </Guideline>
 
@@ -59,142 +173,26 @@ and the user needs to take additional steps to resolve the problem or get additi
 
 In such cases, provide additional actions for your message.
 Alerts use special status buttons to match the button color with the alert color.
+If you need to provide specific contextual links, insert [text links](/components/action/textlink/) directly intro alert description.
 
-Use _at most_ two actions in each Alert:
-one primary and one subtle.
-See more on [the styles of the actions](/design-patterns/action-components/#alert-buttons)
-and how [they should be aligned](/design-patterns/action-components/#button-alignment-in-alert).
+<Guideline type="do" title="Use actions where needed" svgs={[AlertInfoActions]}>
 
-<ReactExample exampleId="Alert-actions_sidebyside" />
+Use at most two actions in each Alert: one primary and one subtle.
+Always align both actions to the left.
+Primary action goes first.
 
-## Content
+</Guideline>
 
-### Explain the alert
+### Use more than just color
 
-Explain why the user was interrupted---confirm the action that will happen
-or describe what just has happened.
+To maximize [accessibility](/foundation/accessibility/), make sure the message is clear from the content.
+Icons can also support the message.
 
-Keep it clear, short, and simple.
-Alerts break the user flow,
-so you want to explain why with as few details as possible.
+Color alone doesn't always distinguish different alert types.
 
-For longer messages, use a title for quick info.
-The user sees the title first when scanning the message.
-You can also provide additional context for the alert by adding a description.
-For more complex messages,
-let users access more information through an [action button](#follow-up-with-actions).
+<Guideline title="Use icons" svgs={[AlertUseIconsDo, AlertUseIconsDont]}>
 
-<GuidelineImages>
+Without icons, people with color blindness might see success and critical alerts as the same.
+Add icons especially for warning and critical alerts.
 
-<DoImage>
-
-![Airline refunds apply. Message: This ticket is covered by airline refund policies. If the airline denies your application, your economy tickets will receive little or no refund.](fileId:fannvRpkOJK6uxxT33EKaa;nodeId:364%3A1687)
-
-Provide context for your messages.
-
-</DoImage>
-
-<DontImage>
-
-![Message: If the airline denies your application, your economy tickets will receive little or no refund.](fileId:fannvRpkOJK6uxxT33EKaa;nodeId:364%3A1688)
-
-Don't include only details with no context.
-
-</DontImage>
-
-</GuidelineImages>
-
-## Look & feel
-
-### Alert types
-
-There are four types of alerts: _informational_, _success_, _warning_, and _critical_.
-
-<ReactExample exampleId="Alert-types" />
-
-<Grid columns="1fr" desktop={{ "columns": "1fr 1fr" }} gap="16px">
-
-<Container>
-
-#### Informational alert
-
-Informational alerts are the most common alerts.
-Use them to **guide a user's attention to relevant details**,
-but keep it focused and related to the topic on the screen.
-
-Consider tailoring your icons to your message.
-Baggage, clocks, or other symbols strengthen the informative nature of your message.
-
-</Container>
-
-<Container>
-
-#### Success alert
-
-Success alerts confirm that an instruction from the user,
-such as to make a payment or request a refund, was processed successfully.
-Usually used without an action button.
-
-**Avoid using success alerts** when there is a follow-up action,
-such as when users need to confirm something by e-mail.
-For such actions, use an informational alert instead.
-
-</Container>
-
-<Container>
-
-#### Warning alert
-
-Use warning alerts when you need to inform users about a **potentially unfavorable situation**
-that requires eventual action from them.
-If the issue requires immediate attention, use a critical alert.
-
-</Container>
-
-<Container>
-
-#### Critical alert
-
-Use critical alerts when something is **blocking** users from continuing
-or an issue needs to be resolved **immediately**.
-The alert should offer a solution to the problem.
-
-A critical alert should provide some form of solution for their problem.
-If something is **important for users to solve as soon as possible**,
-it's worth considering automatically opening a [modal](/components/overlay/modal/).
-
-</Container>
-</Grid>
-
-### Mobile vs. desktop
-
-The alert's _content_ should be the same on all platforms,
-but there's more space to play with on the desktop.
-That's why the desktop versions have larger fonts, icons, and inner padding.
-
-For native or responsive views,
-the design is much more compact to avoid filling the screen with the message.
-
-<ImageContainer size="medium">
-
-![GATSBY_EMPTY_ALT](fileId:4QJZqvBvRrLu6t9mwObCkA;nodeId:1436%3A116 "On mobile platforms, everything is more compact.")
-
-</ImageContainer>
-<ImageContainer size="medium">
-
-![GATSBY_EMPTY_ALT](fileId:4QJZqvBvRrLu6t9mwObCkA;nodeId:1436%3A128 "On desktop platforms, things can breathe")
-
-</ImageContainer>
-
-### Cascading visual hierarchy
-
-![A darker title to stand out; the icon color softens the alert; a complementary description color.](fileId:4QJZqvBvRrLu6t9mwObCkA;nodeId:555%3A0)
-
-Alert components have a visual hierarchy where the title is the most significant element.
-The title's darker color emphasizes it against the description.
-It's a minor adjustment that doesn't stand out to the user.
-
-In React, we also force the colors of child components to match the alert type.
-You can freely use [Text](/components/text/text/), [Heading](/components/text/heading/),
-[List](/components/structure/list/), and [TextLink](/components/action/textlink/) components,
-and the colors of these components will be automatically adjusted.
+</Guideline>
