--- a/docs/src/documentation/05-development/03-hooks/usetransition.mdx
+++ b/docs/src/documentation/05-development/03-hooks/usetransition.mdx
@@ -1,6 +1,6 @@
 ---
 title: useTransition
-description: Animate adding and removing elements from the DOM.
+description: Animate adding and removing elements from the DOM
 ---
 
 import UseTransitionReadMe from "@kiwicom/orbit-components/src/hooks/useTransition/README.md";
