refactor: refactor docs after eslint update

--- a/docs/src/documentation/02-foundation/06-elevation.mdx
+++ b/docs/src/documentation/02-foundation/06-elevation.mdx
@@ -1,6 +1,6 @@
 ---
 title: Elevation
-description: Use shadows to bring the content closer to users.
+description: Use shadows to bring the content closer to users
 redirect_from:
   - /foundation/elevation-hierarchy/
 ---
