--- a/docs/src/documentation/03-components/04-overlay/modal/01-guidelines.mdx
+++ b/docs/src/documentation/03-components/04-overlay/modal/01-guidelines.mdx
@@ -126,8 +126,8 @@ These set the maximum width a modal can have on large screens.
 <table>
   <thead>
     <tr>
-      <th>Size</th>
-      <th>Width</th>
+      <th aria-label="modal-size">Size</th>
+      <th aria-label="modal-width">Width</th>
     </tr>
   </thead>
   <tbody>
