--- a/docs/src/documentation/04-design-patterns/02-action-components.mdx
+++ b/docs/src/documentation/04-design-patterns/02-action-components.mdx
@@ -1,6 +1,6 @@
 ---
 title: Choosing components for actions
-description: How to select which Orbit component to use for your actions.
+description: How to select which Orbit component to use for your actions
 redirect_from:
   - /guides/using-button-type-components/
 ---
