--- a/docs/src/documentation/04-design-patterns/04-form-errors.mdx
+++ b/docs/src/documentation/04-design-patterns/04-form-errors.mdx
@@ -1,6 +1,6 @@
 ---
 title: Forms and errors
-description: Design forms with help and error messages that progressively guide users to completion.
+description: Design forms with help and error messages that progressively guide users to completion
 ---
 
 Even when you’ve [designed the perfect form](/design-patterns/designing-forms),
