--- a/docs/src/snippets/primitives-freedom.mdx
+++ b/docs/src/snippets/primitives-freedom.mdx
@@ -3,5 +3,8 @@
 <p>
   With great freedom comes great responsibility. Primitive components offer many more options for
   styling. Use these options wisely and make sure your {`${props.component}s`} are still{" "}
-  <a href="/foundation/accessibility/#ensure-proper-color-contrast">accessible to everyone</a>.
+  <a href="/foundation/accessibility/#ensure-proper-color-contrast" aria-label="color-contrast">
+    accessible to everyone
+  </a>
+  .
 </p>
