--- a/docs/src/snippets/primitives-still.mdx
+++ b/docs/src/snippets/primitives-still.mdx
@@ -3,7 +3,7 @@
 <p>
   {props.component.replace(/^\w/, c => c.toUpperCase())} primitives are still{" "}
   {`${props.component}s`}. So make sure to follow all the{" "}
-  <a href={`/components/${props.section}/${props.component}/`}>
+  <a href={`/components/${props.section}/${props.component}/`} aria-label="primitives">
     guidelines for {props.component} components
   </a>
   .
