--- a/docs/src/documentation/01-getting-started/03-github.mdx
+++ b/docs/src/documentation/01-getting-started/03-github.mdx
@@ -1,6 +1,6 @@
 ---
 title: GitHub repos & resources
-description: A list of repositories related to the Orbit design system.
+description: A list of repositories related to the Orbit design system
 redirect_from:
   - /getting-started/github-repos-resources/
 ---
