--- a/docs/src/documentation/02-foundation/02-accessibility.mdx
+++ b/docs/src/documentation/02-foundation/02-accessibility.mdx
@@ -1,6 +1,6 @@
 ---
 title: Accessibility
-description: We build Orbit to ensure all users have the most pleasant experience possible, with basic accessibility support automatically in your project by following the Web Content Accessibility Guidelines.
+description: We build Orbit to ensure all users have the most pleasant experience possible, with basic accessibility support automatically in your project by following the Web Content Accessibility Guidelines
 redirect_from:
   - /accessibility/
   - /accessibility/accessibility/
