--- a/docs/src/documentation/02-foundation/08-illustrations.mdx
+++ b/docs/src/documentation/02-foundation/08-illustrations.mdx
@@ -1,6 +1,6 @@
 ---
 title: Illustrations
-description: Illustrations should support the overall message, not just be visual ornaments.
+description: Illustrations should support the overall message, not just be visual ornaments
 ---
 
 import IllustrationList from "../../components/IllustrationList";
