--- a/docs/src/documentation/02-foundation/10-typography/01-general.mdx
+++ b/docs/src/documentation/02-foundation/10-typography/01-general.mdx
@@ -1,6 +1,6 @@
 ---
 title: General
-description: Typography is critical for communicating the hierarchy of a page.
+description: Typography is critical for communicating the hierarchy of a page
 ---
 
 import Palette from "../../../components/Palette";
