--- a/docs/src/documentation/04-design-patterns/01-progressive-disclosure.mdx
+++ b/docs/src/documentation/04-design-patterns/01-progressive-disclosure.mdx
@@ -1,6 +1,6 @@
 ---
 title: Progressive disclosure
-description: Simplify your designs while keeping all information and options available.
+description: Simplify your designs while keeping all information and options available
 redirect_from:
   - /guides/progressive-disclosure/
 ---
