--- a/docs/src/documentation/05-development/03-hooks/usefocustrap.mdx
+++ b/docs/src/documentation/05-development/03-hooks/usefocustrap.mdx
@@ -1,6 +1,6 @@
 ---
 title: useFocusTrap
-description: How to install and use Orbit's useFocusTrap hook.
+description: How to install and use Orbit's useFocusTrap hook
 redirect_from:
   - /utilities/usefocustrap/
 ---
