--- a/docs/src/documentation/05-development/03-hooks/usemediaquery.mdx
+++ b/docs/src/documentation/05-development/03-hooks/usemediaquery.mdx
@@ -1,6 +1,6 @@
 ---
 title: useMediaQuery
-description: Create responsive designs in functional components using Orbit's useMediaQuery hook.
+description: Create responsive designs in functional components using Orbit's useMediaQuery hook
 redirect_from:
   - /utilities/usemediaquery/
 ---
