--- a/docs/src/documentation/02-foundation/07-icons/01-general.mdx
+++ b/docs/src/documentation/02-foundation/07-icons/01-general.mdx
@@ -30,13 +30,13 @@ All of our icons are included in our ["\[Orbit\] Icons" Figma library](https://w
 
 ### In mobile apps
 
-We have an [icon font](http://images.kiwi.com/orbit-icons/orbit-icons-font.zip)
+We have an [icon font](https://images.kiwi.com/orbit-icons/orbit-icons-font.zip)
 ready for use in mobile apps.
 Copy the code of the icon you need and apply where necessary.
 
 <FancyLink
   title="Download the icon font"
-  href="http://images.kiwi.com/orbit-icons/orbit-icons-font.zip"
+  href="https://images.kiwi.com/orbit-icons/orbit-icons-font.zip"
   icon="download"
 />
 
@@ -46,7 +46,7 @@ If you need to use our icons outside of our React environment or mobile apps,
 you have 3 options.
 
 - Find the icon you want in the list below and download the SVG or copy its source.
-- [Download the entire icon](http://images.kiwi.com/orbit-icons/orbit-svgs.zip) set as a ZIP file.
+- [Download the entire icon](https://images.kiwi.com/orbit-icons/orbit-svgs.zip) set as a ZIP file.
 - Download a PNG file for any icon through the [Orbit icon CDN](/foundation/icons/cdn/).
 
 ## List of icons
