--- a/docs/src/documentation/02-foundation/05-design-tokens.mdx
+++ b/docs/src/documentation/02-foundation/05-design-tokens.mdx
@@ -1,6 +1,6 @@
 ---
 title: Design tokens
-description: Design tokens store visual design attributes. They help us make our UI more consistent and support custom themes.
+description: Design tokens store visual design attributes. They help us make our UI more consistent and support custom themes
 redirect_from:
   - /design-tokens/
 ---
@@ -9,7 +9,7 @@ import { Tips } from "@kiwicom/orbit-components/icons";
 
 import DesignTokensList from "../../components/DesignTokensList";
 
-<Callout type="warning" title="Design tokens and theming is still a work in progress." >
+<Callout type="warning" title="Design tokens and theming is still a work in progress.">
 
 We're preparing a new specification of how we want theming to work in Orbit. More soon.
 
