docs: test the deploy process

--- a/docs/src/documentation/06-kiwi-use/02-content/02-grammar-and-mechanics.mdx
+++ b/docs/src/documentation/06-kiwi-use/02-content/02-grammar-and-mechanics.mdx
@@ -5,7 +5,7 @@ redirect_from:
   - /content/grammar-and-mechanics/
 ---
 
-## Why should we care?
+## Why should we care? TEST
 
 <!-- vale Kiwi.Contractions = NO -->
 
