--- a/docs/src/documentation/06-kiwi-use/02-content/02-grammar-and-mechanics.mdx
+++ b/docs/src/documentation/06-kiwi-use/02-content/02-grammar-and-mechanics.mdx
@@ -1,25 +1,38 @@
 ---
 title: Grammar & mechanics
-description: Basic grammar guidelines for writing with Orbit.
+description: Basic grammar guidelines for writing at Kiwi.com.
 redirect_from:
   - /content/grammar-and-mechanics/
 ---
 
-## Why should we care? TEST
+These guidelines follow our [Voice & tone](/kiwi-use/content/voice-and-tone/) principles and help us keep writing across Kiwi.com consistent. Use them to check on details (like spelling) when you write in our official language, American English, and save energy to focus on getting your content right.
 
-<!-- vale Kiwi.Contractions = NO -->
+## Active and passive voice
+Write in the **active voice** whenever you can. 
 
-> If language isn't correct, then what's said isn't what's meant;
-> if what's said isn't what's meant,
-> then what must be done remains undone.
->
-> Confucius
+<GuidelinesSideBySide>
 
-<!-- vale Kiwi.Contractions = YES -->
+<Do>
 
-The guidelines here are intended to free you from having to spend time
-worrying about details like spelling.
-You can spend that time focusing on getting the important part of your content right.
+- (You can) download your boarding pass.
+- We added your baggage.
+
+</Do>
+
+<Dont>
+
+- Your boarding pass can be downloaded.
+- Baggage has been added.
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+
+
+
+
+
 
 ## Spelling
 
