docs: spelling and contractions updates

--- a/docs/src/documentation/06-kiwi-use/02-content/02-grammar-and-mechanics.mdx
+++ b/docs/src/documentation/06-kiwi-use/02-content/02-grammar-and-mechanics.mdx
@@ -29,36 +29,78 @@ Write in the **active voice** whenever you can.
 
 </GuidelinesSideBySide>
 
+Use passive voice only when you want to avoid blaming someone or when the subject is less important than what happened.
+
+<Guideline type="do" title="Do, depending on context">
+
+- It’s not possible to book this flight. / We couldn’t book this flight.
+- Baggage is included. / Booking includes baggage.
+
+</Guideline>
+
 ## Spelling
 
-The main language of Orbit and Kiwi.com is American English.
-
-<!-- vale Kiwi.Britishisms = NO -->
+Kiwi.com’s official language is American English, so use American spelling.
 
 <GuidelinesSideBySide>
 
 <Do>
 
-- recognize
+- canceled (but cancellation)
 - traveler
-- focused
+- apologize
 
 </Do>
 
 <Dont>
 
-- recognise
+- cancelled
 - traveller
-- focussed
+- apologise
 
 </Dont>
 
 </GuidelinesSideBySide>
 
-<!-- vale Kiwi.Britishisms = YES -->
-
 Always include diacritics if they're there:
-Oliver Dlouhý, Petra Vaškových.
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- Oliver Dlouhý, Petra Vaškových
+
+</Do>
+
+<Dont>
+
+- Oliver Dlouhy, Petra Vaskovych
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+## Contractions
+
+Use contractions freely to [sound natural](kiwi-use/content/voice-and-tone/empathetic/#use-words-and-structures-youd-use-in-speaking) and avoid being robotic or overly formal.
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- I’ll check it for you.
+
+</Do>
+
+<Dont>
+
+- I will check it for you.
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+But there are some exceptions where the full form is appropriate. For example, if you need to stress something **is not** possible or to be more formal.
 
 ## Punctuation
 
