docs: fix WebStructureImages by renaming them

--- a/docs/src/documentation/03-components/01-action/button/01-guidelines.mdx
+++ b/docs/src/documentation/03-components/01-action/button/01-guidelines.mdx
@@ -6,7 +6,7 @@ redirect_from:
 
 import { Grid } from "@kiwicom/orbit-components";
 
-import WebStructureImage from "../../../../images/component-structure/web/button.svg";
+import ButtonWebImage from "../../../../images/component-structure/web/button.svg";
 import ButtonPrimaryActionDo from "../../../../images/button-primary-action-do.svg";
 import ButtonPrimaryActionDont from "../../../../images/button-primary-action-dont.svg";
 import ButtonShowHierarchyDo from "../../../../images/button-show-hierarchy-do.svg";
@@ -58,7 +58,7 @@ Buttons help users to perform tasks or trigger processes.
 <ComponentStructure
   component="Button"
   web={{
-    Image: WebStructureImage,
+    Image: ButtonWebImage,
     imageWidth: 124,
     parts: [
       {
