--- a/docs/src/documentation/03-components/03-information/alert/01-guidelines.mdx
+++ b/docs/src/documentation/03-components/03-information/alert/01-guidelines.mdx
@@ -6,7 +6,7 @@ redirect_from:
 
 import { Grid } from "@kiwicom/orbit-components";
 
-import WebStructureImage from "../../../../images/component-structure/web/alert.svg";
+import AlertWebImage from "../../../../images/component-structure/web/alert.svg";
 import AlertInfoActions from "../../../../images/alert-info-w-actions.svg";
 import AlertUseIconsDo from "../../../../images/alert-use-icons_do.svg";
 import AlertUseIconsDont from "../../../../images/alert-use-icons_dont.svg";
@@ -55,7 +55,7 @@ Alert is used to communicate important information or feedback to the user. It i
   component="Alert"
   vertical
   web={{
-    Image: WebStructureImage,
+    Image: AlertWebImage,
     parts: [
       {
         name: "Title",
