chore: update component status

--- a/docs/src/documentation/03-components/05-input/inputselect/01-guidelines.mdx
+++ b/docs/src/documentation/03-components/05-input/inputselect/01-guidelines.mdx
@@ -5,3 +5,7 @@ redirect_from:
 ---
 
 <ReactExample exampleId="InputSelect-default" height="500px" />
+
+## Component status
+
+<ComponentStatus component="InputSelect" />
