docs: update Content pages

--- a/docs/src/documentation/06-kiwi-use/02-content/01-voice-and-tone/02-empathetic.mdx
+++ b/docs/src/documentation/06-kiwi-use/02-content/01-voice-and-tone/02-empathetic.mdx
@@ -5,7 +5,6 @@ redirect_from:
 ---
 
 import { Illustration } from "@kiwicom/orbit-components";
-import { Compare, PassengerOutline, UserGroup } from "@kiwicom/orbit-components/icons";
 
 <Illustration name="ReferAFriend" alt="" size="display" />
 
@@ -22,8 +21,6 @@ but instead try to figure out what led to the current situation
 and how we can move closer to an ideal state.
 
 ## Always think of your audience
-
-<UserGroup size="large" />
 
 You should always know **who you're writing for**
 and adjust your language and style based on it.
@@ -58,7 +55,7 @@ so your entire audience is a part of it, no matter their background or language 
 
 </GuidelinesSideBySide>
 
-### Use words and structures you'd use in speaking
+### Use words and structures you'd use when speaking
 
 Make what you're writing seem **natural**.
 If it flows naturally when you say it aloud, people can better understand it.
@@ -87,14 +84,12 @@ This has the side effect of [making things shorter](/kiwi-use/content/voice-and-
 
 </GuidelinesSideBySide>
 
-## Adapt tone to the situation
-
-<Compare size="large" />
+## Adapt your tone to the situation
 
 These guidelines aren't absolute and can't cover everything.
 You should use your common sense and **adapt the guidelines** to each situation.
 
-### Keep tone serious in stressful situations
+### Keep your tone serious in stressful situations
 
 <Guideline type="do" title="Be more serious with errors">
 
@@ -133,9 +128,65 @@ it helps if they can feel **excited** about the possibilities.
 When writing for the planning stage, don't focus too much on the details.
 There's plenty of time for that when they're buying the tickets.
 
-## Keep focus on users
+### Take advantage of opportunities for playfulness
 
-<PassengerOutline size="large" />
+Parts of the user flow where users are likely to be on a “**happy path**” — confirmation messages, thank-you pages, or onboarding flows — present a great **opportunity to incorporate creative and engaging copy**. While clarity and brevity remain our top priorities, we should also strive to **delight our users**.
+
+We’re charming, but we’re not cutesy.
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- This page no longer exists, or perhaps it never existed in the first place! But that’s a question for Schrödinger.
+
+</Do>
+
+<Dont>
+
+- Oops, there’s a glitch with this page! We’re sooo sorry, this never happens to us. Try again, pretty please.
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+We care, but we’re not desperate.
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- Whenever you're ready, we'll be here to help you plan your next trip.
+
+</Do>
+
+<Dont>
+
+- Remember us? We miss you! Come back and find your next adventure!
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+We’re direct, but we’re not condescending.
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- Up to 25% of flights get delayed or canceled every year. Protect your trip with the Kiwi.com Guarantee.
+
+</Do>
+
+<Dont>
+
+- In case you didn’t notice, travel became tricky in the past couple of years. Lucky for you, there’s our Guarantee.
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+## Keep focus on users
 
 We aim to **show** our **understanding** of others and not just our inside jokes.
 Keep your text focused on your audience.
@@ -166,6 +217,25 @@ Understand **what users expect** at each step in the process and you can help sa
 
 - The average person will love walking the empty streets of Brno in August.
 - To connect to the results, we're going to add an option.
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- Hi [customer name],...
+- Hi,…
+- Hello,…
+
+</Do>
+
+<Dont>
+
+- Dear customer,...
+- To whom it may concern,...
 
 </Dont>
 
