--- a/docs/src/documentation/06-kiwi-use/02-content/02-grammar-and-mechanics.mdx
+++ b/docs/src/documentation/06-kiwi-use/02-content/02-grammar-and-mechanics.mdx
@@ -1,219 +1,829 @@
 ---
 title: Grammar & mechanics
-description: Basic grammar guidelines for writing with Orbit.
+description: Basic grammar guidelines for writing at Kiwi.com.
 redirect_from:
   - /content/grammar-and-mechanics/
 ---
 
-## Why should we care?
+These guidelines follow our [Voice & tone](/kiwi-use/content/voice-and-tone/) principles and help us keep writing across Kiwi.com consistent. Use them to check on details (like spelling) when you write in our official language, American English, and save energy to focus on getting your content right.
 
-<!-- vale Kiwi.Contractions = NO -->
+## Active and passive voice
 
-> If language isn't correct, then what's said isn't what's meant;
-> if what's said isn't what's meant,
-> then what must be done remains undone.
->
-> Confucius
+Write in the **active voice** whenever you can.
 
-<!-- vale Kiwi.Contractions = YES -->
+<GuidelinesSideBySide>
 
-The guidelines here are intended to free you from having to spend time
-worrying about details like spelling.
-You can spend that time focusing on getting the important part of your content right.
+<Do>
+
+- (You can) download your boarding pass.
+- We added your baggage.
+
+</Do>
+
+<Dont>
+
+- Your boarding pass can be downloaded.
+- Baggage has been added.
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+Use passive voice only when you want to avoid blaming someone or when the subject is less important than what happened.
+
+<Guideline type="do" title="Do, depending on context">
+
+- It’s not possible to book this flight. / We couldn’t book this flight.
+- Baggage is included. / Booking includes baggage.
+
+</Guideline>
 
 ## Spelling
 
-The main language of Orbit and Kiwi.com is American English.
-
-<!-- vale Kiwi.Britishisms = NO -->
+Kiwi.com’s official language is American English, so use American spelling.
 
 <GuidelinesSideBySide>
 
 <Do>
 
-- recognize
+- canceled (but cancellation)
 - traveler
-- focused
+- apologize
 
 </Do>
 
 <Dont>
 
-- recognise
+- cancelled
 - traveller
-- focussed
+- apologise
 
 </Dont>
 
 </GuidelinesSideBySide>
 
-<!-- vale Kiwi.Britishisms = YES -->
-
 Always include diacritics if they're there:
-Oliver Dlouhý, Petra Vaškových.
 
-## Punctuation
+<GuidelinesSideBySide>
 
-Prefer em dashes (---) over semicolons---never use hyphens unless you're hyphenating.
+<Do>
 
-Use en dashes to connect things, such as times and dates, in short forms:
-Jan 24 to Feb 28, 10:00 to 14:00.
+- Oliver Dlouhý, Petra Vaškových
 
-Don't use punctuation in abbreviations: UK, US.
+</Do>
 
-Don't use spaces before or after degree symbols when writing temperatures: 30ºC (86ºF).
+<Dont>
 
-When appropriate, use the final comma in a series (known as the Oxford or serial comma):
-planes, trains, and automobiles.
+- Oliver Dlouhy, Petra Vaskovych
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+## Contractions
+
+Use contractions freely to [sound natural](/kiwi-use/content/voice-and-tone/empathetic/#use-words-and-structures-youd-use-in-speaking) and avoid being robotic or overly formal.
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- I’ll check it for you.
+
+</Do>
+
+<Dont>
+
+- I will check it for you.
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+But there are some exceptions where the full form is appropriate. For example, if you need to stress something **is not** possible or to be more formal.
+
+## Abbreviations and acronyms
+
+Only use common abbreviations and acronyms.
+
+<Guideline type="do" title="Do">
+
+- UK
+- UTC
+- COVID-19
+
+</Guideline>
+
+If something isn’t common, spell it out or explain it first.
+
+<Guideline type="do" title="Do">
+
+- carrier reservation number (PNR)
+
+</Guideline>
 
 ## Capitalization
 
-In most writing, use sentence case.
-That means generally only capitalizing the first word in sentences and headings.
+### Sentence case
 
-Titles of works of art (books, films, songs) are written in title case,
-meaning all the major words are capitalized.
-They don't have any other formatting: How to Play Dead.
-
-All brand names must follow the company's own style:
-easyJet, SpongeBob SquarePants.
-
-Kiwi.com product and service names are generally written in title case:
-Nomad, Tequila, Virtual Interlining, Kiwi.com Guarantee, and so on.
-
-## Plurals
-
-When there may be one or multiple items of a group,
-don't form plurals with an s in parentheses.
-If you can, reword the sentence to be clear.
-If you can't, write as if the plural option included both the singular and the plural.
-
-If it's important to write specifically that there may be one or multiple items,
-use the phrase "one or more".
-
-<!-- vale Kiwi.OptionalPlurals = NO -->
+Use **sentence case** in all of your writing. Capitalize only the first word in sentences, headings, buttons, emails, etc. Don't capitalize after a dash or colon in titles or lists.
 
 <GuidelinesSideBySide>
 
 <Do>
 
-- Visa requirements for travel to the US
-- Travelers need to know where their towels are at all times.
-- Upload everything in the folder, which can contain one or more booking files.
+- Manage my trip / Manage trip
+- Your booking is confirmed
+- Reminder: add your details
 
 </Do>
 
 <Dont>
 
-- Visa requirement(s) for travel to the US
-- (A) traveler(s) need(s) to know where his/her (their) towel(s) is (are) at all times.
-- Upload everything in the folder, which can contain booking file(s).
+- Manage My Trip
+- Your Booking Is Confirmed
+- Reminder: Add Your Details
 
 </Dont>
 
 </GuidelinesSideBySide>
 
-<!-- vale Kiwi.OptionalPlurals = YES -->
+### Title case
 
-## Numbers
+Capitalize **proper nouns, legal terms**, and **product names** according to their own rules, and also **names of sections or buttons** when referring to them.
 
-Generally, one to nine are written as words.
-Anything larger than nine should be written as a numeral (10, 11, and so on).
+<Guideline type="do" title="Brand names">
 
-Write the numbers one to nine as numerals in these cases:
+- easyJet
+- Wizz Air
+- British Airways
 
-- When starting a sentence
-- In the same sentence as higher numbers
-  ("you added 3 pieces of luggage each for 5 passengers for a total of 15 items")
-- In headings, buttons, and wherever space is very limited (not subheadings)
-- In prices, version numbers, dates, and times
+</Guideline>
 
-When talking about numerous people or animals,
-always write thousands, millions, or billions in full:
-60.5 million passengers.
-For anything else, M or B is ok, depending on how it reads: $60B.
+<Guideline type="do" title="Legal terms">
 
-Use commas to separate thousand units: 1,000.
+- Terms & Conditions
+- Privacy Policy
 
-## Date & time
+</Guideline>
 
-All dates are written month day, year (October 26, 2018),
-and day-of-week, month day, year: Friday, October 26, 2018.
-When space is limited, use abbreviations: Fri, Oct 26, 2018.
+<Guideline type="do" title="Kiwi.com product and feature names">
 
-Use the 24-hour clock: 14:59.
+- Kiwi.com Guarantee
+- Kiwi.com Credit
+- Nomad
 
-When describing a length of time, use abbreviations: 8h 30min.
+</Guideline>
 
-If it's absolutely necessary to distinguish the calendar era,
-use BCE (Before Common Era) and CE (Common Era).
+Check our [glossary](/kiwi-use/content/glossary/) for a full list of Kiwi.com product-related names.
 
-## Currency
+<Guideline type="do" title="Referring to sections or buttons">
 
-The plural of euro is euro.
+- Click **Refunds & cancellations**
 
-€, $ and £ are placed before the price, without a space: €6.43.
+</Guideline>
 
-Kč is placed after the price.
+### All caps
 
-¢ and p are placed after the price without a space: 83¢.
+Don’t use all caps unless they’re a part of the design and **never use them to emphasize a point**.
 
-<!-- vale Kiwi.Currency = NO -->
+- To emphasize text, use **bold** instead.
+
+## Plural vs. singular
+
+Use plural by default if there can't be multiple versions of the copy.
 
 <GuidelinesSideBySide>
 
 <Do>
 
-- euro
-- €10, $15, £20
+- Carriers don’t offer any refunds.
+- Your boarding passes will be ready soon.
 
 </Do>
 
 <Dont>
 
-- euros
-- 10 €, $ 15, 20 £
+- Carrier(s) don’t/doesn’t offer any refunds.
+- Your boarding pass/es will be ready soon.
 
 </Dont>
 
 </GuidelinesSideBySide>
 
-<!-- vale Kiwi.Currency = Yes -->
+If it’s important to specifically mention that there may be one or multiple items, use the phrase “one or more”.
+
+## Punctuation
+
+### Ampersands
+
+Use “and” instead of “&” in longer texts as it improves [readability](https://readabilityguidelines.co.uk/grammar-points/ampersands/) and therefore is more [inclusive](/kiwi-use/content/voice-and-tone/inclusive/).
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- You’ll need a visa and a PCR test to travel to your destination.
+
+</Do>
+
+<Dont>
+
+- You’ll need a visa & a PCR test to travel to your destination.
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+But there are a few exceptions if you need to save space, especially in titles and buttons.
+
+<Guideline type="do" title="Do">
+
+- Refunds & cancellations
+- Help & support
+- Overview & payment
+
+</Guideline>
+
+### Commas
+
+Use commas to mimic speech — to add a pause where it’d naturally occur or to separate or highlight parts of a sentence.
+
+Don’t use commas if they don’t serve a purpose, for example after “please” or before and after “unfortunately“ in the middle of a sentence.
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- Please add your details.
+- We unfortunately can’t help.
+- Hi John,…
+
+</Do>
+
+<Dont>
+
+- Please, add your details.
+- We, unfortunately, can’t help.
+- Hi, John,…
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+If you need to list multiple items, use a serial comma (also known as the Oxford comma).
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- Plane, bus, and train
+
+</Do>
+
+<Dont>
+
+- Plane, bus and train
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+The only exception is when you use an ampersand.
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- Changes, refunds & cancellations
+
+</Do>
+
+<Dont>
+
+- Changes, refunds, & cancellations
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+### Exclamation points
+
+Use exclamation points sparingly, and only when they serve a purpose — when you talk about a really exciting thing.
+
+Never use multiple exclamation points in a row, and avoid using them in longer sentences altogether.
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- Your booking is ready!
+
+</Do>
+
+<Dont>
+
+- You saved a new password!
+- We have tickets for €5! Book now!!!
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+### Interrobang, ellipsis, and other unusual punctuation
+
+The rule of thumb for using unusual punctuation is: don’t. If you do, you should make a case for it.
+
+<Guideline type="dont" title="Don't">
+
+- Don’t want to miss this deal?!
+- Check this out...
+
+</Guideline>
+
+### Symbols and spaces
+
+If an item has a symbol or an official abbreviation, use it instead of spelling it out.
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- ×
+- kg, cm
+- ºC, ºF
+- €, $
+
+</Do>
+
+<Dont>
+
+- x
+- kilogram, centimeter
+- Celsius, Fahrenheit
+- EUR, USD
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+Don’t use spaces between single numbers and the things you’re counting unless it helps with readability.
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- 8h 30min, &lt; 48h
+- 7kg
+- 3×
+- 0ºC
+- €20
+- 40 × 56 × 29 cm
+
+</Do>
+
+<Dont>
+
+- 8 h 30 min, &lt; 48 h
+- 7 kg
+- 3 ×
+- 0 ºC
+- € 20
+- 40×56×29cm
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+### Full stops
+
+Use full stops (periods) only at the ends of complete sentences. Never use them at the ends of headers or buttons.
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- You can find us at www.kiwi.com.
+- Header: Continue your search
+- Button: Find out more
+
+</Do>
+
+<Dont>
+
+- You can find us at www.kiwi.com
+- Header: Continue your search.
+- Button: Find out more.
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+### Quotation marks & apostrophes
+
+Always use curly quotation marks and apostrophes.
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- <div style={{ fontSize: "28px" }}> &rsquo; </div>
+- <div style={{ fontSize: "28px" }}> &ldquo; &rdquo; </div>
+
+</Do>
+
+<Dont>
+
+- <div style={{ fontSize: "28px" }}> ' </div>
+- <div style={{ fontSize: "28px" }}> " " </div>
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+Don’t use quotation marks to refer to parts of the interface (buttons, menus, options) — use bold instead.
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- Click **Refunds & cancellations**
+
+</Do>
+
+<Dont>
+
+- Click "Refunds & cancellations"
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+### Dashes and hyphens
+
+Use a **hyphen (-)** for compound words. Don’t use spaces before or after.
+
+<Guideline type="do" title="Do">
+
+- 1-hour flight
+- co-traveler
+
+</Guideline>
+
+Use an **en-dash (–)** without spaces to talk about ranges of numbers (like times or dates).
+
+But when you write about locations, replace the en-dash with an arrow (**→, ⇄**) wherever possible and use spaces before and after the arrow.
+
+<Guideline type="do" title="Do">
+
+- 12:30–14:35
+- 1–2 days
+- But: Prague → Barcelona
+
+</Guideline>
+
+Use an **em-dash (—)** instead of commas or colons. Use spaces before and after.
+
+<Guideline type="do" title="Do">
+
+- We checked you in — now you can download your boarding passes.
+
+</Guideline>
+
+### Emojis
+
+Use emojis sparingly to attract your reader’s attention or emphasize a (positive) feeling, but never to replace words or as the only way to express emotion.
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- Widely recognized
+- Work well across devices and cultures
+- Visible in both dark and light modes
+
+</Do>
+
+<Dont>
+
+- Emoticons :(
+- Multiple emojis in a row
+- Emojis with sexual innuendo
+- Emojis that might be considered too emotional, personal, or unprofessional
+- Emojis that represent human figures, groups of people, or human body parts
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+_These rules were inspired by [emoji guidelines by Content Design London](https://readabilityguidelines.co.uk/images/emojis/)._
+
+Add an emoji at the end of the sentence to highlight the whole message. If you absolutely need to highlight a particular word, put the emoji after it.
+
+<Guideline type="do" title="Do">
+
+- Your booking is confirmed! 🎉
+
+</Guideline>
+
+## Dates, numbers, and measurements
+
+### Numbers
+
+Write all numbers as numerals for better readability.
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- You have 2 hours to transfer.
+
+</Do>
+
+<Dont>
+
+- You have two hours to transfer.
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+When you write about numerous people or animals, always write thousands, millions, or billions in full. For anything else, M or B is ok, depending on how it reads.
+
+<Guideline type="do" title="Do">
+
+- 60.5 million passengers
+- We saved $60B.
+
+</Guideline>
+
+Use commas to separate thousands units.
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- 1,000
+
+</Do>
+
+<Dont>
+
+- 1.000
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+### Date
+
+Write date as **day-of-week, month, day, year**. When the space is limited, use abbreviations or numerals.
+
+<Guideline type="do" title="Do">
+
+- Friday, October 26, 2018
+- Fri Oct 26 to Sun Oct 28
+- Fri Oct 26–Sun Oct 28
+- 10/26–10/28 (❗Only as the last resort when the space is extremely limited)
+
+</Guideline>
+
+### Time
+
+Use the 24-hour clock and UTC time zone to refer to the time in general.
+
+<Guideline type="do" title="Do">
+
+- 14:59 UTC
+
+</Guideline>
+
+Use an **en-dash (–)** when referring to a duration in time.
+
+<Guideline type="do" title="Do">
+
+- 14:00–16:30
+
+</Guideline>
+
+When describing a length of time, use abbreviations.
+
+<Guideline type="do" title="Do">
+
+- 8h 30min
+
+</Guideline>
+
+### Currency
+
+Use the currency symbol instead of language code.
+
+Place the symbols €, $, and £ before the price, without a space. For other currencies, follow the language standards.
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- €20 (but 20 EUR)
+- $100 (but 100 USD)
+- 83¢
+- 3200Kč
+
+</Do>
+
+<Dont>
+
+- 20 €
+- 100 $
+- ¢83
+- Kč3200
+
+</Dont>
+
+</GuidelinesSideBySide>
 
 ## Lists
 
-When presenting a sequence of steps, use an ordered list.
-When it's a limited set of items where the order doesn't matter,
-use an unordered list.
-If your list starts to get very long, consider a table.
+Use lists to present steps or sets of information ideally consisting of 3 or 5 bullet points — if you have more points, consider a table.
 
-<Guideline type="do" title="List items should have parallel structures">
+Make sure that the items on the list have a parallel structure and context, especially if you create a list of pros and cons.
 
-Brno offers many attractions:
+<GuidelinesSideBySide>
 
-- A Gothic cathedral
-- Modernist villas
+<Do>
+
+- Checked baggage
+- Priority boarding
+- Free check-in
+
+</Do>
+
+<Dont>
+
+- Checked baggage
+- priority boarding
+- You'll get free check-in
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+Align your capitalization and punctuation as well.
+
+- If an item on the list is a complete sentence, capitalize the first word and add a full stop.
+- If an item isn’t a complete sentence, don’t use punctuation, but capitalize the first word of each bullet.
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- We'll check you in for free.
+- Free check-in
+
+</Do>
+
+<Dont>
+
+- we'll check you in for free
+- free check-in
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+If you can't use an **ordered** list because of space restrictions and you need to describe the full path to get somewhere, use a single right-facing chevron (&gt;) and bold clickable UI elements.
+
+<Guideline type="do" title="Do">
+
+- **Profile**&gt;**Settings**&gt;**App preferences**&gt;**Currency**
 
 </Guideline>
 
-<Guideline type="don't" title="Don't vary the item structur">
+## Pronouns
 
-Brno offers many attractions:
+### Talking to readers
 
-- A Gothic cathedral
-- There are modernist villas.
+When you talk to your readers, address them directly and use the second person — **you, your**.
 
-</Guideline>
+<GuidelinesSideBySide>
+
+<Do>
+
+- You can book a new trip.
+
+</Do>
+
+<Dont>
+
+- It’s possible to book a new trip. / The customer can book a new trip.
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+### Talking as readers
+
+When your readers need to perform an action, like click on a button, choose an answer to a question we’ve asked, or provide legal consent, use the first person — **me, I, my**.
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- Manage my trip / Manage trip
+- I agree to these Terms & Conditions.
+
+</Do>
+
+<Dont>
+
+- Manage your trip
+- You should agree to these Terms & Conditions.
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+### Talking about someone
+
+When you refer to someone in general, or they haven’t disclosed their gender, use singular **they, their**.
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- One of the travelers hasn't added **their** details for online check-in.
+
+</Do>
+
+<Dont>
+
+- One of the travelers hasn't added **his/her** details for online check-in.
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+### Talking about us — Kiwi.com
+
+When you refer to Kiwi.com, use **we, us, our** as default unless you have to specifically stress our name for clarity or branding purposes.
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- We can offer you the best deals.
+- All our messages are also available in your Kiwi.com inbox.
+
+</Do>
+
+<Dont>
+
+- Kiwi.com can offer you the best deals.
+- All our messages are also available in your inbox. (Can be confused with email inbox.)
+
+</Dont>
+
+</GuidelinesSideBySide>
 
 ## Sentence structure
 
-Write short sentences.
-Short sentences improve readability.
-They're more powerful.
+Write **short sentences** and put essential info first. Short sentences improve readability. They’re more powerful. They value your reader’s time.
 
-Long sentences that run on and on,
-and are full of commas, colons, and semicolons---and many different clauses---are really confusing
-and awkward to read for even the strongest readers---just look at James Joyce's Ulysses;
-it's an impossible read that most people just can't get through
-because they can't follow anything because his sentences are so long and winding,
-like the narrow streets of Dublin.
+Long sentences that run on and on and are full of commas, colons, and semicolons — and many different clauses — are really confusing and awkward to read for even the strongest readers — just imagine receiving an email with sentences stretching through multiple paragraphs, as long and winding as this one; it’s an impossible read that most people just can’t get through and either scan through it or skip it completely on a busy day — and let’s be honest, every day is a busy day, especially when traveling.
+
+Use a text editor like [hemingwayapp.com](https://hemingwayapp.com/) if you’re not sure how complex your text is.
+
+## Word choice
+
+Always use words and phrases that are easily understandable. Don’t use extra words that don’t serve a purpose.
+
+💡 Check our [glossary](/kiwi-use/content/glossary/) for the list of common words we use across [Kiwi.com](http://Kiwi.com)\_.
+
+<GuidelinesSideBySide>
+
+<Do>
+
+- buy
+- speed up
+- We'll need your details.
+
+</Do>
+
+<Dont>
+
+- purchase
+- expedite
+- Please be advised that we will need your details.
+
+</Dont>
+
+</GuidelinesSideBySide>
+
+When possible, use informal short forms of the words depending on the context and space. Short forms sound more natural and are especially useful for buttons.
+
+<Guideline type="do" title="Do">
+
+- info / information
+- OK / okay
+
+</Guideline>
