--- a/docs/src/documentation/06-kiwi-use/02-content/01-voice-and-tone/03-straightforward.mdx
+++ b/docs/src/documentation/06-kiwi-use/02-content/01-voice-and-tone/03-straightforward.mdx
@@ -5,7 +5,6 @@ redirect_from:
 ---
 
 import { Illustration } from "@kiwicom/orbit-components";
-import { FlightDirect, QuestionCircle, ShowMore } from "@kiwicom/orbit-components/icons";
 
 <Illustration name="CompassTravelPlan" alt="" size="display" />
 
@@ -22,8 +21,6 @@ or designing the perfect travel experience.
 We don't have time to wait for someone to get to the point.
 
 ## Be clear
-
-<QuestionCircle size="large" />
 
 Make everything **more obvious** than you might think was necessary.
 Remember to still [keep your content conversational](/kiwi-use/content/voice-and-tone/empathetic/#use-words-and-structures-youd-use-in-speaking)---
@@ -106,8 +103,6 @@ but the button itself should be a short, clear action.
 
 ## Be explicit
 
-<ShowMore size="large" />
-
 Aim to share **everything necessary**.
 Provide the context that you know so well that other people might not have.
 
@@ -124,8 +119,6 @@ Instead, give it to them.
 This includes writing copy that describes the relevance and importance of various options.
 
 ## Be concise
-
-<FlightDirect size="large" />
 
 Don't take too much time or space to explain your point
 or you **lose your audience**.
@@ -182,3 +175,12 @@ Focusing on nouns often adds length without any more meaning.
 </Dont>
 
 </GuidelinesSideBySide>
+
+Always write in **active voice** whenever you can. Only use passive voice when you want to avoid accusing anyone or when the subject is less important than what happened.
+
+<Guideline type="do" title="Acceptable passive voice">
+
+- Extra legroom seating is included in your bundle.
+- The price of your trip has increased.
+
+</Guideline>
