--- a/docs/src/documentation/06-kiwi-use/02-content/03-glossary.mdx
+++ b/docs/src/documentation/06-kiwi-use/02-content/03-glossary.mdx
@@ -1,208 +1,138 @@
 ---
 title: Glossary
-description: A list of most used words and phrases in Kiwi.com products.
+description: A list of the most used words and phrases in Kiwi.com products.
 redirect_from:
   - /content/glossary/
 ---
 
-## Travel words & phrases
-
-return (trip)
-
-: A journey to a specific destination and back.
-
-one-way (trip)
-
-: A journey to a specific destination.
-
-multi-city (trip)
-
-: A journey when a passenger travels from one city to another,
-stays there for some time, continues the journey to another city, and so on.
-
-radius search
-
-: A search for flights within a certain area.
-
-e-ticket
-
-: Contains travel details and enables check-in but doen't allow a passenger to board.
-
-boarding pass
-
-: Generated after check-in and allows a passenger to board.
-Only applies to air tickets.
-
-carrier ticket
-
-: Tickets for ground transportation.
-
-additional services
-
-: Seating, meals, sports equipment, and so on.
-
-special assistance
-
-: An additional service to help passengers with disabilities.
-
-check-in (noun/adjective), check in (verb)
-
-: Example: Once we _check in_ our passengers, they can skip _check-in_ altogether,
-saving them the _check-in_ fee and the line at the _check-in_ counter.
-
-recheck
-
-: When baggage needs to be collected during a layover.
-
-checked baggage
-
-: When passengers need to check their baggage at the airport.
-
-cabin baggage
-
-: Baggage passengers can take with them on board. (Not _hand luggage_.)
-
-personal item
-
-: An item in addition to cabin baggage that can be carried on board,
-such as a camera bag or purse.
-
-Passenger Name Record (PNR)
-
-: A numbering convention used in the travel industry.
-Each itinerary has a unique PNR associated with all the booking and personal details.
-
-booking ID (BID)
-
-: Kiwi.com's private numbering convention used to locate our bookings (such as 2326340).
-Always use the long form (not BID) in communications with users.
-
-## Itinerary parts
-
-Kiwis can find [more information about itinerary naming](https://confluence.kiwi.com/display/EN/Names+of+itinerary+parts).
-
-segment
-
-: A segment is an atomic unit of the itinerary.
-One segment connects two locations and can be traveled by different vehicles.
-If you're taking a flight, it's called a **flight segment**.
-When you're traveling by bus, it's a **bus segment**. And so on.
-
-connection
-
-: A connection is a part of a trip that requires you to change
-from one vehicle to another at a connection point.
-This can be from one plane to another at an intermediary airport
-or from one form of transport to another, such as transferring from a bus to a plane.
-A connection consists of two or more segments.
-Each segments can be operated by the same or a different carrier.
-
-sector
-
-: A sector is a part of the itinerary that consists of one or more segments
-to reach a specific destination.
-A one-way trip has one sector.
-For example, for a trip from Prague to Valencia with a connection in London
-the sector is from Prague to Valencia.
-A round trip has two sectors.
-For example, consider a round trip from Barcelona to Beijing with a connection in Vienna.
-One sector (called the **outbound sector**) is from Barcelona to Beijing
-and the second (called the **inbound sector**) is from Beijing to Barcelona.
-A multi-city trip has two or more sectors.
-For example, a multi-city trip that goes from Prague to London,
-then from Manchester to Barcelona,
-and then from Madrid to Vienna has three sectors.
-
-itinerary
-
-: An itinerary is all the segments that make up a single booking.
-
 ## Form labels
 
-Given names
+| Term                   | Meaning                                                                                                            |
+| :--------------------- | :----------------------------------------------------------------------------------------------------------------- |
+| **cardholder’s name**  | The name of the owner of the card; used in payment forms                                                           |
+| **credit card number** | Set of digits typically on the front of the payment card that’s used as a card identifier                          |
+| **date of birth**      | Used instead of “birth date” or similar                                                                            |
+| **expiration date**    | Used for travel documents and in the payment form; not “expiry date”                                               |
+| **gender**             | Refers to the gender in the official travel document; selected from a list of options                              |
+| **given names**        | Used instead of “first name” as it covers middle names as well                                                     |
+| **nationality**        | Refers to the nationality in the official travel document; selected from a list of countries                       |
+| **security code**      | A three- or four-digit code typically on the back of the payment card; used as a security feature in payment forms |
+| **surnames**           | Second part of the name                                                                                            |
 
-: We use this instead of "First name" as it covers middle names as well.
+## Travel words & phrases
 
-Surnames
+### General
 
-: Second part of the name.
+| Term                                 | Meaning                                                                                                                                                                                                                                                                               |
+| :----------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| **booking number**                   | A numeric code used by Kiwi.com to locate bookings (such as 2326340). Each booking with Kiwi.com has a unique booking number (never called BID or booking ID in customer-facing communication).                                                                                       |
+| **carrier reservation number (PNR)** | **Passenger Name Record** in full — an alphanumeric code used by the airlines to locate bookings (such as A1YE21). Each flight ticket has a unique PNR associated with the booking and personal details.                                                                              |
+| **e-ticket**                         | Confirmation of the reservation generated by Kiwi.com; contains travel details and enables check-in, but is not a boarding pass                                                                                                                                                       |
+| **boarding pass**                    | Document generated after check-in by the airlines that allows a passenger to board; only applies to air tickets                                                                                                                                                                       |
+| **carrier tickets**                  | Tickets for ground transport generated by the carriers. If we have both boarding passes and carrier tickets, we mention both.                                                                                                                                                         |
+| **passenger**                        | A person booked on a specific trip; used in context of a specific trip when referring to details such as passport info.                                                                                                                                                               |
+| **traveler**                         | A person who has an account, has booked, traveled, or plans to travel with us; used when speaking about our customers in general                                                                                                                                                      |
+| **co-traveler**                      | A fellow customer who usually travels with the customer with the Kiwi.com account.                                                                                                                                                                                                    |
+| **expiration (date)**                | Usually related to travel documents and payment cards. We don’t use “expiry date”.                                                                                                                                                                                                    |
+| **layover**                          | A part of a trip that requires you to change from one vehicle to another at a connection point. This can be from one plane to another at an intermediary airport or from one form of transport to another, such as transferring from a bus to a plane. Synonym: stop (not “stopover”) |
+| **low-cost airline**                 | An airline that minimizes operating costs and doesn’t provide services traditionally included in the fare offered by commercial airlines.                                                                                                                                             |
+| **special assistance**               | An additional service to help passengers with disabilities.                                                                                                                                                                                                                           |
 
-Nationality
+### Ancillaries
 
-: A list of countries.
+| Term                                           | Meaning                                                                                                                                                                                                                                                                                                                                                                |
+| :--------------------------------------------- | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **additional services**                        | Seating, meals, sports equipment, and so on.                                                                                                                                                                                                                                                                                                                           |
+| **baggage**                                    | Suitcases and bags containing personal belongings packed for traveling.<br/><br/>We use "baggage" instead of "bags" wherever possible. The only exception is where space is absolutely crucial like in our search tags. Baggage is more versatile in terms of singular, plural, and the stuff that travelers would potentially take with them. We don’t use “luggage”. |
+| **baggage claim (area)**                       | The whole area within the terminal where arriving passengers claim checked-in baggage after disembarking from a flight.                                                                                                                                                                                                                                                |
+| **baggage carousel**                           | A moving belt where you collect your baggage at an airport (not "baggage conveyor belt").                                                                                                                                                                                                                                                                              |
+| **baggage recheck**                            | When baggage needs to be collected and checked in again during a layover.                                                                                                                                                                                                                                                                                              |
+| **checked baggage**                            | Baggage that needs to be checked in at the airport (not “hold baggage”).                                                                                                                                                                                                                                                                                               |
+| **cabin baggage**                              | Baggage passengers can take with them on board (not ”hand” or “carry-on baggage”)                                                                                                                                                                                                                                                                                      |
+| **personal item**                              | A smaller item you carry on board in addition to your cabin baggage, such as a camera bag, purse, or a small backpack.                                                                                                                                                                                                                                                 |
+| **carry-on bundle**                            | A bundle that includes both a personal item and cabin baggage.                                                                                                                                                                                                                                                                                                         |
+| **first class**                                | A luxury travel class offered by some airlines                                                                                                                                                                                                                                                                                                                         |
+| **check-in (noun/adjective), check in (verb)** | A process where passengers confirm they’ll be on their respective flight and get their boarding pass.<br/><br/>Example:<br/>◦ When we _check our_ passengers _in_, they don’t have to _check in_ at the airport, saving them a _check-in_ fee and waiting in line at the _check-in_ counter.                                                                           |
+| **premium economy**                            | A travel class offered by some airlines that provides additional services compared to standard economy class.                                                                                                                                                                                                                                                          |
+| **priority boarding**                          | An additional service that allows passengers to avoid lines and board the plane before other passengers.                                                                                                                                                                                                                                                               |
 
-Gender
+### Bookings and trips
 
-: A list of options.
+| Term                                  | Meaning                                                                                                                                                                                                                                                                                                                                                                                                            |
+| :------------------------------------ | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **booking**                           | A reservation a customer made with us; used when talking about the act of booking or specifics such as booking options or booking number, otherwise we prefer **trip**<br/>Examples:<br/>◦ **Booking** number<br/>◦ You **booked** 1 flight.                                                                                                                                                                       |
+| **reservation**                       | A reservation we made for the customer with each carrier; synonym: ticket<br/>Examples:<br/>• Carrier **reservation** number (PNR)<br/>• Your booking consists of 2 separate **reservations** with carriers.                                                                                                                                                                                                       |
+| **trip**                              | The whole travel experience containing everything a customer booked with us. We use it when talking about a particular **booking**.<br/>Examples:<br/>• **trip page, my trips** <br/>• Your **trip** starts in a few days.<br/><br/>We rarely use synonyms (for example, "journey").                                                                                                                               |
+| **one-way / round / multi-city trip** | Types of trips, depending on what destinations they contain:<br/>• A **one-way trip** goes to one destination and only contains a departure trip.<br/>• A **round trip** goes there and back and contains a departure and return trip.<br/>• A **multi-city trip** has multiple destinations — a passenger travels from one city to another, stays there for some time, and continues the journey to another city. |
+| **departure / return trip**           | Sections of a round trip all going in one direction — either to the destination or back (not outbound / inbound)                                                                                                                                                                                                                                                                                                   |
+| **part** (of the trip)                | The smallest section of the trip; for example, a flight or a bus/train ride <br/>Example:<br/>• A **part** of your trip was rescheduled.<br/><br/>We only use "segments," "legs," "sections," and "sectors" internally.                                                                                                                                                                                            |
+| **itinerary**                         | All parts of the trip that make up a single booking; a trip schedule that consists of one or more carrier reservations<br/>Examples:<br/>◦ **Itinerary** detail<br/>◦ Alternative **itinerary**                                                                                                                                                                                                                    |
 
-Date of birth
+**TL;DR**: When a customer **books** a trip with us, we make one or more carrier **reservations** for them. Their trip schedule — **itinerary** — can have multiple **parts**, forming a **departure** and/or **return trip**.
 
-: Don't use "Birth date" or similar.
+## Product names
 
-Credit card number
+### Examples of generic product parts and services
 
-: In payment forms.
+| Term              | Meaning                                                                                              |
+| :---------------- | :--------------------------------------------------------------------------------------------------- |
+| **account**       | A part of the app where registered Kiwi.com customers have access to all their bookings and settings |
+| **price alerts**  | Email and push notifications about price changes for saved routes                                    |
+| **search**        | Kiwi.com search page                                                                                 |
+| **radius search** | A search for flights within a certain area                                                           |
 
-Expiration date
+### Branded product features
 
-: In payment forms.
+| Term                   | Meaning                                                                                                                                                 |
+| :--------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| **Nomad**              | A feature that allows customers to choose their preferred destinations with an approximate time of stay in each, and get suggestions for the best route |
+| **Kiwi.com Guarantee** | A paid service offered to protect customers in case of changes or cancellations caused by the carrier                                                   |
+| **Kiwi.com Credit**    | Refund method customers can use as a payment option on Kiwi.com. We never use the plural (Credits).                                                     |
 
-Security code
+We always use the full names of Kiwi.com products (Kiwi.com Credit, Kiwi.com Guarantee) the first time we refer to them. When we refer to them again, we can use only the second part (Credit, Guarantee).
 
-: In payment forms.
+### Travel hacks
 
-Cardholder's name
+| Term                    | Meaning                                                                                                                                                                                                                                                                                                                                                                                        |
+| :---------------------- | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **self-transfer**       | Combines multiple carrier reservations in a single itinerary, where the customer is responsible for their own transfer during a layover<br/>Examples:<br/>◦ **Self-transfer** travel hack<br/>◦ Itinerary with a **self-transfer** between flights<br/><br/>This is also known as **virtual interlining**, but we don't use the term in customer-facing communication — we explain it instead. |
+| **hidden city**         | A carrier reservation with a flight that has a layover in the passenger’s intended destination but that continues somewhere else; cheaper than a direct flight to the intended destination<br/>Examples:<br/>◦ **Hidden city** travel hack<br/>◦ This itinerary has not 1 but 2 **hidden cities**.                                                                                             |
+| **throwaway ticketing** | A round-trip ticket that’s cheaper than a one-way ticket<br/>Examples:<br/>◦ **Throwaway ticketing** travel hack<br/>◦ This itinerary has 1 **throwaway ticket**.                                                                                                                                                                                                                              |
 
-: In payment forms.
+### Ticket types
 
-## Product related
+| Term                | Meaning                                                                                                                                                                                                               |
+| :------------------ | :-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **Saver Ticket**    | The cheapest Kiwi.com fare, recommended if a customer has a fixed schedule and doesn't plan to change or cancel their trip                                                                                            |
+| **Standard Ticket** | A Kiwi.com fare that allows customers to rebook their trip once and only pay the difference                                                                                                                           |
+| **Flexi Ticket**    | The most flexible Kiwi.com fare that allows customers to rebook their trip once and only pay the difference or cancel their trip (before a certain deadline) and get an 80% refund of the carrier ticket and services |
 
-Kiwi.com
+We call these **ticket types** or **types of tickets** (the term **fare types** is used only internally).
 
-: This is the brand name of our product.
-It's not Kiwi or Skypicker.
+### Service levels
 
-Kiwi.com Guarantee
+| Term                 | Meaning                                                                                                                                                                                   |
+| :------------------- | :---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **Basic Services**   | The lowest level of Kiwi.com customer support. Customers with Basic Services have to wait longer than other customers and have to pay a €30 processing fee for additional services.       |
+| **Plus Services**    | The mid-level of Kiwi.com customer support. Customers with Plus Services are prioritized over customers with Basic Services and have to pay a €10 processing fee for additional services. |
+| **Premium Services** | The highest level of Kiwi.com customer support. Customers with Premium Services are served first and don't pay processing fees for additional services.                                   |
 
-: Our guarantee to our customers.
+We call these **service levels** or **levels of customer support** (the term **service packages** is only used internally).
 
-Nomad
+### Terms and policies
 
-: A search feature based on a traveling salesman algorithm
-that takes destinations and shuffles them to prepare the shortest, most affordable itineraries.
+| Term                             | Meaning                                                                                               |
+| :------------------------------- | :---------------------------------------------------------------------------------------------------- |
+| **Privacy Policy**               | A legal document that discloses the ways Kiwi.com gathers, uses, discloses, and manages customer data |
+| **Refund & Cancellation Policy** | A legal document explaining the terms of refund and cancellation                                      |
+| **Terms & Conditions**           | A legal agreement between Kiwi.com and a person who wants to use the company’s services               |
+| **Terms of Use**                 | Terms that apply to every visitor of the Kiwi.com website                                             |
 
-Holidays
+## Miscellaneous
 
-: Search feature for holiday packages.
-
-Travel Planner
-
-: Search feature for planning travel itineraries for events and meetings using calendar integrations.
-
-Refer a Friend
-
-: Tell your pals about Kiwi.com.
-
-Stories
-
-: Our online travel magazine.
-
-Price Alerts
-
-: Receive alerts about changes in travel pricing.
-
-Travel Basic
-
-: Essential travel insurance.
-
-Travel Plus
-
-: Extended travel insurance.
-
-Help
-
-: The external name of our Smart FAQ with articles to answer our customers' most common questions.
-
-Kiwi.com Credit
-
-: Sent to our customer accounts from refunds, Refer a Friend, and so on to pay for travel.
+- **Auto-reply**; but **autofill**, **prefill**
+- **Afterwards**, not afterward
+- **Website**, not site or webpage
+- **Customer support**, not service and always in lowercase
+- **Discount** whenever possible, **promo code** for the actual code; **voucher** for the non-monetary refund we receive from carriers
+- **Sign in/out**, not log in/out
