docs: remove inkLighter references

--- a/docs/src/documentation/02-foundation/04-color/01-colors.mdx
+++ b/docs/src/documentation/02-foundation/04-color/01-colors.mdx
@@ -218,7 +218,7 @@ Use <InlineToken name="borderColorInput" /> instead.
 
 ### Ink
 
-<Palette allowAdditional colors={["paletteInkLighter", "paletteInkLight", "paletteInkNormal"]} />
+<Palette allowAdditional colors={["paletteInkLight", "paletteInkNormal", "paletteInkDark"]} />
 
 For more information about usage, see [Typography](/foundation/typography/) and [Icons](/foundation/icons/).
 
