--- a/docs/src/documentation/02-foundation/04-color/02-palette.mdx
+++ b/docs/src/documentation/02-foundation/04-color/02-palette.mdx
@@ -38,10 +38,7 @@ See especially the [guidelines for the additional shades](/foundation/color/#orb
 
 ## Ink
 
-<Palette
-  allowAdditional
-  colors={["paletteInkLighter", "paletteInkLight", "paletteInkNormal", "paletteInkDark"]}
-/>
+<Palette allowAdditional colors={["paletteInkLight", "paletteInkNormal", "paletteInkDark"]} />
 
 ## Green
 
