docs(tokens): update tokens and tailwind documentation

--- a/docs/src/documentation/02-foundation/11-tailwind/01-installation.mdx
+++ b/docs/src/documentation/02-foundation/11-tailwind/01-installation.mdx
@@ -1,5 +1,5 @@
 ---
-title: Tailwind preset
+title: Installation
 description: Orbit tailwind preset is the abstraction above Orbit design tokens package. It provides the Orbit design tokens as Tailwind CSS configuration.
 ---
 
