chore(docs): replace white for whiteNormal token

--- a/docs/src/documentation/02-foundation/04-color/01-colors.mdx
+++ b/docs/src/documentation/02-foundation/04-color/01-colors.mdx
@@ -38,7 +38,7 @@ For most of our colors[^note], the following points should apply:
 We use two main colors for backgrounds:
 
 <Stack direction="row" spacing="medium">
-  <InlineToken name="paletteWhite" size="large" alternateName />
+  <InlineToken name="paletteWhiteNormal" size="large" alternateName />
   <InlineToken name="paletteCloudLight" size="large" alternateName />
 </Stack>
 
@@ -160,7 +160,7 @@ To try to keep the UI light as possible, use only Cloud colors or Light shades f
 
 ### White
 
-<Palette allowAdditional colors={["paletteWhite"]} />
+<Palette allowAdditional colors={["paletteWhiteNormal"]} />
 
 #### White guidelines
 
