--- a/docs/src/documentation/03-components/05-input/inputfield/01-guidelines.mdx
+++ b/docs/src/documentation/03-components/05-input/inputfield/01-guidelines.mdx
@@ -68,12 +68,12 @@ It's important for fields to stand out from the background
 as something different that can be filled in.
 
 That's why our native fields come with a <InlineToken name="paletteCloudNormal" alternateName /> background
-to stand out against the <InlineToken name="paletteWhite" alternateName /> background natural to the app.
+to stand out against the <InlineToken name="paletteWhiteNormal" alternateName /> background natural to the app.
 And they don't have a border as that would make them too heavy and overwhelming.
 
 For our desktop and responsive fields,
 which are usually placed against a <InlineToken name="paletteCloudLight" alternateName /> background,
-the fields have a <InlineToken name="paletteWhite" alternateName /> background to stand out.
+the fields have a <InlineToken name="paletteWhiteNormal" alternateName /> background to stand out.
 They get a solid 1 px border to make sure it's clear they're a place to add input.
 
 ### Suffixes
