fixup! chore(docs): add tailwind classnames to documentation

--- a/docs/src/documentation/02-foundation/05-design-tokens/01-general.mdx
+++ b/docs/src/documentation/02-foundation/05-design-tokens/01-general.mdx
@@ -18,14 +18,14 @@ Therefore we have two main levels of design tokens:
 
 ### Global design tokens
 
-Global level of our design tokens represents the core
+The global level of our design tokens represents the core
 and main level of properties that can be used globally,
-in most use cases and describes the majority of the [foundation](/foundation).
+in most use cases. It also describes the majority of the [foundation](/foundation).
 
 ### Component specific design tokens
 
 On the other hand,
-component specific design tokens represents properties
+component specific design tokens represent properties
 associated with a component or component group.
 
 They should be used only for their intended components and variants.
