--- a/docs/src/documentation/02-foundation/05-design-tokens/02-installation.mdx
+++ b/docs/src/documentation/02-foundation/05-design-tokens/02-installation.mdx
@@ -1,5 +1,6 @@
 ---
 title: Installation
+description: How to install and use our design tokens package
 ---
 
 If you're already using `@kiwicom/orbit-components`,
